# nginx-discovery

./: .gitignore  CHANGELOG.md  CLI_GUIDE.md  CLI_QUICKREF.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: parser_bench.rs
examples/: export_formats.rs  extract_logs.rs  extract_servers.rs  lex_config.rs  network_checks.rs  parse_config.rs  test_nginx_detection.rs
src/: discovery.rs  error.rs  error_builder.rs  lib.rs  visitor.rs
src/ast/: directive.rs  mod.rs  span.rs  value.rs
src/export/: filter.rs  format.rs  mod.rs  options.rs
src/extract/: logs.rs  mod.rs  servers.rs
src/network/: dns.rs  mod.rs  port.rs  ssl.rs  types.rs  upstream.rs
src/parser/: lexer.rs  mod.rs  parse.rs  parser.rs  token.rs
src/system/: mod.rs
src/types/: access_log.rs  error_log.rs  listen.rs  location.rs  log_format.rs  mod.rs  server.rs
tests/: discovery_integration.rs  export_integration.rs  extract_integration.rs  lexer_integration.rs  network_integration.rs  parser_integration.rs  server_discovery_integration.rs
