# Cargo.toml for nginx-discovery v0.4.0

[package]
name = "nginx-discovery"
version = "0.4.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Ajit Kumar <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Parse, analyze, and extract information from NGINX configurations"
homepage = "https://github.com/urwithajit9/nginx-discovery"
repository = "https://github.com/urwithajit9/nginx-discovery"
documentation = "https://docs.rs/nginx-discovery"
readme = "README.md"
keywords = ["nginx", "configuration", "network", "dns", "ssl"]
categories = ["parser-implementations", "command-line-utilities", "development-tools"]

[dependencies]
# Core dependencies
thiserror = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

# Export formats (optional)
toml = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Network features (optional)
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time"], optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
futures = { version = "0.3", optional = true }
x509-parser = { version = "0.15", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }

# System interaction (optional)
which = { version = "6.0", optional = true }

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
colored = { version = "2.1", optional = true }
tabled = { version = "0.15", optional = true }
dialoguer = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["system"]
visitor = []
includes = []

# Core features
system = ["dep:which"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml"]

# Export features
export-toml = ["dep:toml", "serde"]
export-markdown = ["dep:chrono", "serde"]
export-all = ["export-toml", "export-markdown"]

# Network features
network = [
    "dep:tokio",
    "dep:reqwest",
    "dep:futures",
    "dep:x509-parser",
    "dep:trust-dns-resolver",
    "dep:chrono"
]

# CLI features
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:colored",
    "dep:tabled",
    "dep:dialoguer",
    "dep:anyhow",
    "system",
    "serde",
]

# All features
full = ["cli", "network", "export-all"]

[[bin]]
name = "nginx-discover"
path = "src/bin/nginx-discover.rs"
required-features = ["cli"]

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]